--- a/styles.css
+++ b/styles.css
@@ -88,8 +88,8 @@ h1 {
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 50vh;
-  height: 50vh;
+  width: 340px;
+  height: 720px;
   background: linear-gradient(118.38deg, #29323C -4.6%, #485563 200.44%);
   box-shadow: -8px -8px 20px #2A333D, 10px 7px 20px #475462;
   border-radius: 30px;
